hphp/hack/test/typecheck/class_level_where_clauses/this_as/protected_static_member_01.php.legacy_decl.exp
File "protected_static_member_01.php", line 20, characters 11-12:
Could not find static method me in type T (Typing[4090])
File "protected_static_member_01.php", line 17, characters 7-7:
Declaration of T is here
File "protected_static_member_01.php", line 29, characters 11-12:
Could not find static method me in type T2 (Typing[4090])
File "protected_static_member_01.php", line 24, characters 7-8:
Declaration of T2 is here
